[BREAKING] Change API for /session
